crates/toml_edit/tests/snapshots/invalid/integer/leading-zero-sign-01.stderr
TOML parse error at line 1, column 25
  |
1 | leading-zero-sign-01 = -01
  |                         ^
unexpected leading zero, expected nothing
